--- a/src/style/objects/image.scss
+++ b/src/style/objects/image.scss
@@ -1,7 +1,2 @@
 .o-image {
-
-  &--rounded {
-    clip-path: circle($heroImageSize at center);
-  }
-
 }
